# qec

./: INSTALL_LIBGPIOD_V2.md  LICENSE.md  README.md  meson.build
include/: comms_manager.hpp  comms_message.hpp  deployment_watcher.hpp  events.hpp  exceptions.hpp  imu.hpp  imuOld.hpp  logger.hpp  message_types.hpp  module_states.hpp  tsqueue.hpp  ws_link.hpp
include/channels/: dummy_channel.cpp  dummy_channel.hpp  ichannel.hpp  radio_channel.cpp  radio_channel.hpp  tcp_channel.cpp  tcp_channel.hpp  uart_radio_channel.cpp  uart_radio_channel.hpp  udp_channel.cpp  udp_channel.hpp
src/: camera_service.cpp  camera_service.hpp  can_test.cpp  comms_manager.cpp  deployment_watcher.cpp  imu.cpp  imuOld.cpp  main.cpp  utils.hpp  ws_link.cpp
web/: app.js  dash.css  index.html  index.php  mini.html  server6.py  startup.csv
